Fix BrowsingDataCounter race condition

There is a chance that a BrowsingDataCounter is still counting when it is
restarted. To avoid calling ReportResult twice and hitting a NOTREACHED() all
asynchronous tasks have to be cancelled when Count() is called.

BUG=719376

Review-Url: https://codereview.chromium.org/2867033002
Cr-Commit-Position: refs/heads/master@{#469956}

Former-commit-id: a34462a6f8d57df524dd8cb17e61b094dedee879