components/browsing_data/core/counters/history_counter.cc
@@ -55,6 +55,8 @@ void HistoryCounter::Count() {
   // Reset the state.
   cancelable_task_tracker_.TryCancelAll();
   web_history_request_.reset();
+  weak_ptr_factory_.InvalidateWeakPtrs();
+
   has_synced_visits_ = false;
 
   // Count the locally stored items.
